<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/text_create_account"
        android:background="@drawable/bg_footer" />

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_description"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_account"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_25sdp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/enter_your_personal_data"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_signUp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/password"
                android:inputType="numberPassword|textPassword"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword|numberPassword"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:textColorHint="@color/light_gray_color"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/button_bg_color"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/ll_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_hint"
        android:layout_marginVertical="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/by_continuing_you_are_agreeing_our"
            android:textColor="@color/black"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/text_term_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/terms_amp_condition"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/and_our_privacy_polices"
            android:textColor="@color/black"
            android:textSize="@dimen/_7sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_signup_google"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/_50sdp"
            android:layout_height=".5dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@color/light_gray_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/or_signup_with_google"
            android:textColor="@color/light_gray_color"
            android:textSize="@dimen/_9sdp" />

        <View
            android:layout_width="@dimen/_50sdp"
            android:layout_height=".5dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@color/light_gray_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_signup_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@drawable/button_bg_color"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_45sdp"
        android:text="@string/continue_with_google"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/light_gray_color"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_9sdp" />

    </LinearLayout>
</RelativeLayout>
