<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.CreateNoteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Create Notes"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/enter_your_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:background="@null"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/title"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/light_gray_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/enter_your_description"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:background="@null"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/description"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/light_gray_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:background="@null"
        android:fontFamily="@font/poppins_light"
        android:hint="date"
        android:inputType="date"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/light_gray_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/text_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/button_bg_color"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_45sdp"
        android:text="Save Your Note"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp" />


</LinearLayout>